colour and font changes

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
+  /* :root {
     font-family: "PT Sans", sans-serif;
-  }
+  } */
 
   * {
     box-sizing: border-box;
